# circus

./: CMakeLists.txt  Info.plist.in  LICENSE.md  MyIcon.icns  README.md
cmake/: FindBOOST1_83.cmake
datasets/: DAC2024-2025_circus.bib  DATE2024-2025_circus.bib  Dac2013-2023Proc_circus.bib  Dac2019Proc_circus.bib  Date2010Proc_circus.bib  Date2013-2023Proc_circus.bib  ETS2019Proc_circus.bib  FDL2019Proc_circus.bib  VLSI-Soc2019_circus.bib  verification_ai.bib  verification_ai_fixed.bib
examples/: CMakeLists.txt
scripts/: circus_downloadProc.py  circus_fixMissing.py
src/: main.cc
src/bibParser/: CMakeLists.txt
src/bibParser/include/: bibParser.hh
src/bibParser/src/: bibParser.cc
src/bibtex-spirit/: CMakeLists.txt
src/bibtex-spirit/include/: bibtexreader.hpp
src/commandLineParser/include/: commandLineParser.hh
src/commandLineParser/src/: commandLineParser.cc
src/db/: CMakeLists.txt
src/db/include/: DBPayload.hh  db.hh  dbUtils.hh
src/db/src/: db.cc
src/globals/include/: globals.hh
src/globals/src/: globals.cc
src/gui/: CMakeLists.txt
src/gui/include/: gui.hh
src/gui/src/: gui.cc  keywordsTable.cc  papersTable.cc
src/logging/include/: message.hh
src/tool/: CMakeLists.txt
src/utils/: CMakeLists.txt
src/utils/include/: icon.hh  misc.hh
tests/: CMakeLists.txt
