SET(NAME tool)
project(${NAME})



#############################################
# Sources.
#############################################

#SET(TOOL_SRC )

#############################################
# Targets.
#############################################
#add_library(${NAME} ${MINER_SRC})
#target_include_directories(${NAME} PUBLIC )

#add_subdirectory()

#target_link_libraries(${NAME} )



